add community page and download

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -3,6 +3,7 @@ $font-varelaRound = 'Varela Round', sans-serif
 $font-sansPro = 'Source Sans Pro', sans-serif;
 @require "~reset.css"
 @require "main.styl"
+@require "community.styl"
 @require "nav.styl"
 @require "footer.styl"
 
@@ -29,6 +30,15 @@ html
   font-size 30px
   text-align center
   margin 0 0 60px
+
+.section-sub-title
+  font-family $font-sansPro
+  font-size 19px
+  color #5b5b5b
+
+.header-section
+  display block
+  background: #0163b4
 
 .btn
   display inline-block
