--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -4,6 +4,7 @@ $font-sansPro = 'Source Sans Pro', sans-serif;
 @require "~reset.css"
 @require "main.styl"
 @require "community.styl"
+@require "downloads.styl"
 @require "nav.styl"
 @require "footer.styl"
 
