--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -5,6 +5,7 @@ $font-sansPro = 'Source Sans Pro', sans-serif;
 @require "main.styl"
 @require "community.styl"
 @require "downloads.styl"
+@require "documentation.styl"
 @require "nav.styl"
 @require "footer.styl"
 
@@ -64,6 +65,10 @@ html
   width 30px
   height 30px
   margin-bottom 30px
+
+.clearfix
+  display block
+  clear both
 
 
 .mb-m-30
