--- a/src/css/downloads.styl
+++ b/src/css/downloads.styl
@@ -3,6 +3,9 @@
   &-content
     padding 60px 0
 
+    & .section-sub-title
+      font-weight bold
+
   &-item__wrap
     display flex
     flex-direction row
@@ -87,16 +90,43 @@
       font-family $font-sansPro
       font-size 25px
       font-weight bold
+      margin-bottom 10px
       color #0c6dbf
 
   &-content
     font-family $font-sansPro
     font-size 19px
     color #5b5b5b
+    padding 0 13%
+
+    & > *
+      margin-bottom 15px
+
+    & ul
+      list-style disc
+      padding-left 20px
 
     &__title
       font-family $font-sansPro
       color #0c6dbf
+
+.versions
+  text-align center
+  padding 60px 0 55px
+  font-size 0
+  font-family $font-sansPro
+
+  & a
+    display inline-block
+    font-size 19px
+    color #0c6ec0
+    text-decoration none
+    margin-bottom 5px
+
+    &:hover,
+    &:active
+      color #0d8dee
+      text-decoration underline
 
 
 @media (min-width: 768px)
