- add markdown loader - first part parsing md

--- a/src/css/community.styl
+++ b/src/css/community.styl
@@ -16,6 +16,10 @@
     align-content flex-start
     align-items flex-start
 
+  &-item
+    border-top 1px solid #b6cedc
+    padding-top 20px
+
   &-item,
   &-person
     font-family $font-sansPro
@@ -66,6 +70,8 @@
     position relative
     padding-right 28px
     margin-right 28px
+    padding-top: 0
+    border-top none
 
     &:after
       content ''
