--- a/src/css/downloads.styl
+++ b/src/css/downloads.styl
@@ -109,7 +109,8 @@
       list-style disc
       padding-left 20px
 
-    &__title
+    &__title,
+    & h3
       font-family $font-sansPro
       color #0c6dbf
 
