--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -24,6 +24,10 @@ section
   padding-left 30px !important
   padding-right 30px !important
 
+footer
+  z-index 1
+  position relative
+
 
 .bg-gradient
   background-image $bg-gradient
