- special fix for Yaroslav

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -5,7 +5,6 @@ header
 .main
   &-section
     position relative
-    overflow hidden
 
   &-content
     width 100%
@@ -25,9 +24,11 @@ header
     margin-bottom 40px
 
 #particles-js
-  position fixed
+  position absolute
   width 100%
   z-index 0
+  top 0
+  left 0
 
 .how-it-works
   padding 60px 0
