- linked download link - slide header - scroll top on document page

--- a/src/css/documentation.styl
+++ b/src/css/documentation.styl
@@ -23,6 +23,10 @@
       color #0c6dbf
       text-decoration none
 
+      &.active
+        font-weight bold
+        color #0c6dbf
+
       &:hover,
       &:active
         color #0d8dee
