- header height - border on sections - change main background color

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -13,6 +13,9 @@ $font-sansPro = 'Source Sans Pro', sans-serif;
 html
   box-sizing border-box
 
+body
+  background #F0F0F0
+
 *,
 *:before,
 *:after
@@ -110,14 +113,14 @@ footer
 @media (min-width: 786px)
 
   .show-header
-    padding-top 170px
+    padding-top 100px
 
   .hide-header
-    padding-top 170px
+    padding-top 100px
 
     & .header-section
       position fixed
-      top -170px
+      top -100px
 
   section
     padding-left 0 !important
