--- a/src/css/downloads.styl
+++ b/src/css/downloads.styl
@@ -85,6 +85,8 @@
 
 .release
   &-notes
+    border-top solid 1px #b6cedc
+    border-bottom solid 1px #b6cedc
     padding 60px 0
     background-image linear-gradient(to bottom, rgba(222, 230, 242, 0.4), rgba(182, 235, 250, 0.21)), linear-gradient(rgba(17, 122, 201, 0.07), rgba(17, 122, 201, 0.07))
 
