--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -39,6 +39,7 @@ header
     width 50%
 
 .features
+  border-top solid 1px #b6cedc
   text-align center
   padding 60px 0
   background-image linear-gradient(to bottom, rgba(222, 230, 242, 0.4), rgba(182, 235, 250, 0.21)), linear-gradient(rgba(17, 122, 201, 0.07), rgba(17, 122, 201, 0.07))
@@ -109,8 +110,8 @@ header
 
 @media (min-width: 1024px)
   header
-    height 170px
-    min-height 170px
+    height 100px
+    min-height 100px
 
 @media (min-width: 1200px)
 
