--- a/src/css/community.styl
+++ b/src/css/community.styl
@@ -45,6 +45,7 @@
       margin: 50% 0 0 50%;
       top: -62px;
       left: -62px;
+      width 125px
 
   &-title
     font-weight bold
@@ -93,6 +94,9 @@
   .community-person
     width 50%
     padding 0 5px
+
+.thanks
+  padding 60px 0
 
 @media (min-width: 1200px)
 
