--- a/src/css/documentation.styl
+++ b/src/css/documentation.styl
@@ -40,7 +40,7 @@
 
       & .documentation-content-title
         font-family $font-sansPro
-        font-size 25px
+        font-size: 30px
         font-weight bold
         color #0c6dbf
         margin-bottom 30px
