--- a/src/css/documentation.styl
+++ b/src/css/documentation.styl
@@ -62,6 +62,11 @@
         margin-bottom 30px
         text-align center
 
+      & h3
+        margin-top 24px
+        margin-bottom 16px
+        font-weight 600
+
       & ul
         padding-left 20px
         margin-bottom 15px
