Added code highlight to docs

--- a/src/css/documentation.styl
+++ b/src/css/documentation.styl
@@ -94,21 +94,24 @@
         color #0c6dbf !important
 
       & code
-        background-color #e3e3e3
         font-size 17px
         color #5b5b5b
-        padding 0 5px
+        padding 2px
+        display inline
         font-family 'Courier New'
+        background white
+
+        & *
+            font-family 'Courier New'
 
       & pre
-        background-color #e3e3e3
-        padding 10px
         overflow auto
         margin 21px 0px
         border solid 1px #a5a3a3
 
         & code
-          padding 0
+          padding 20px
+          display block
 
       & strong
         font-weight bold
