- change npm command

--- a/src/css/documentation.styl
+++ b/src/css/documentation.styl
@@ -45,6 +45,7 @@
         color #0c6dbf
         margin-bottom 30px
         text-align center
+        margin-top 0
 
       & *
         font-family $font-sansPro
