Layout fixes; Text fixes; Sidebar docs improvements

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -35,6 +35,12 @@ header
   padding 60px 0
   text-align center
 
+  & div
+    font-family $font-sansPro
+    font-size 19px
+    line-height 25px
+    margin-bottom 10px
+
   & img
     width 40%
 
