--- a/src/css/documentation.styl
+++ b/src/css/documentation.styl
@@ -11,6 +11,10 @@
       font-family $font-sansPro
       font-size 19px
 
+      & ul
+        margin-left 24px
+        margin-top 12px
+
     & li
       padding 18px 20px 18px 30px
       border-bottom solid 1px #b6cedc
@@ -55,16 +59,22 @@
 
       & p
         margin-bottom 15px
+        text-align justify
 
       & h2
-        font-size 25px
-        font-weight bold
         color #0c6dbf
-        margin-bottom 30px
+        font-size 26px
+        font-weight bold
+        margin-bottom 26px
         text-align center
 
       & h3
-        margin-top 24px
+        margin-top 32px
+        margin-bottom 16px
+        font-weight 600
+
+      & h4, h5
+        margin-top 32px
         margin-bottom 16px
         font-weight 600
 
@@ -87,12 +97,13 @@
         font-size 17px
         color #5b5b5b
         padding 0 5px
+        font-family 'Courier New'
 
       & pre
         background-color #e3e3e3
-        padding 30px
+        padding 10px
         overflow auto
-        margin 40px -30px
+        margin 21px 0px
         border solid 1px #a5a3a3
 
         & code
@@ -164,9 +175,6 @@ aside
 
         width 70%
         float right
-
-        & pre
-          margin 60px 0
 
         & h2
           text-align left
