- fix css responsive

--- a/src/css/documentation.styl
+++ b/src/css/documentation.styl
@@ -16,6 +16,7 @@
         margin-top 12px
 
     & li
+      color: #0c6dbf;
       padding 18px 20px 18px 30px
       border-bottom solid 1px #b6cedc
 
