--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -42,7 +42,7 @@ header
     margin-bottom 10px
 
   & img
-    width 40%
+    width 70%
 
 .features
   border-top solid 1px #b6cedc
@@ -113,6 +113,11 @@ header
   .feature-item
     width 50%
     padding 0 10px
+
+  .how-it-works
+
+    & img
+      width 40%
 
 @media (min-width: 1024px)
   header
