- fix css responsive

--- a/src/css/community.styl
+++ b/src/css/community.styl
@@ -31,6 +31,9 @@
     width 100%
     display inline-block
 
+  &-person
+    margin-bottom 40px
+
   &-avatar
     position relative
     margin 0 auto 10px
