--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -42,7 +42,7 @@ header
     margin-bottom 10px
 
   & img
-    width 70%
+    width 100%
 
 .features
   border-top solid 1px #b6cedc
@@ -65,7 +65,7 @@ header
     font-size 19px
     text-align center
     color #585858
-    margin-bottom 20px
+    margin-bottom 40px
     width 100%
     display inline-block
 
@@ -123,6 +123,9 @@ header
   header
     height 100px
     min-height 100px
+
+  .feature-item
+    margin-bottom 20px
 
 @media (min-width: 1200px)
 
