--- a/src/css/community.styl
+++ b/src/css/community.styl
@@ -6,6 +6,7 @@
 
   &-people
     border-top solid 1px #b6cedc
+    border-bottom solid 1px #b6cedc
     background-image linear-gradient(to bottom, rgba(222, 230, 242, 0.4), rgba(182, 235, 250, 0.21)), linear-gradient(rgba(17, 122, 201, 0.07), rgba(17, 122, 201, 0.07))
 
   &-item__wrap,
@@ -36,7 +37,7 @@
 
   &-avatar
     position relative
-    margin 0 auto 10px
+    margin 0 auto 15px
     width 125px
     height 125px
     overflow hidden
